--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         <main>
             <div class="titulo">
-                <h1>Lobo cinza</h1>
-                <span>da familia canis lupos</span>
+                <h1 class="title-titulo">Lobo cinza</h1>
+                <span class="span-titulo">da familia canis lupos</span>
             </div>
 
             <div class="caracteristicas">
@@ -47,24 +47,24 @@
                 </div>
             </div>
 
-            <p class="col-wide">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
+            <p class="col-wide main-paragraph">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
             cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos
             reafirmam que o lobo cinzento é ancestral do cão doméstico.</p>
 
             <img class="wolf-1" src="img/wolf1.jpg" alt="wolf 1">
 
-            <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno
+            <p class="destaque">É um sobrevivente da Era do Gelo, originário do Pleistoceno
             Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de
             DNA e estudos.</p>
 
             <img class="wolf-2" src="img/wolf2.jpg" alt="wolf 2">
 
-            <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo
+            <p class="main-paragraph">O peso e tamanho dos lobos variam muito em todo o mundo, tendendo
             a aumentar proporcionalmente com a latitude, como previsto pela teoria
             de Christian Bergmann. Em geral, a altura, medida a partir dos ombros,
             varia de 60 a 95 centímetros.</p>
 
-            <p>O peso varia geograficamente. Em média, os lobos europeus pesam 38,5
+            <p class="main-paragraph">O peso varia geograficamente. Em média, os lobos europeus pesam 38,5
             kg; os lobos da América do Norte, 36 kg; os lobos indianos e árabes, 25 kg.[7]
             Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8]
             e na antiga União Soviética.</p>
@@ -84,17 +84,18 @@
             </ul>
 
             <div class="informacoes">
-                <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
+                <p class="main-paragraph">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
                 cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos
                 reafirmam que o lobo cinzento é ancestral do cão doméstico.</p>
 
-                <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca
+                <p class="main-paragraph p2">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca
                 de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam
                 que o lobo cinzento é ancestral do cão doméstico.</p>
             </div>
 
             <img class="col-wide" src="img/wolf3.jpg" alt="wolf 3">
         </main>
+
         <aside class="noticias">
             <div class="anuncio-item">
                 <img src="img/anuncio-1.jpg" alt="anuncio 1">
@@ -106,7 +107,7 @@
         </aside>
 
         <footer>
-            <p>Origamid © 2012 - 2017. Alguns direitos reservados.</p>
+            <p class="main-paragraph p-footer">Origamid © 2012 - 2017. Alguns direitos reservados.</p>
         </footer>
     </div>
 </body>
